# MachinaQ

./: .gitignore  README.md  TRAINING_HELP.md  aagnet_env_slim.yaml  aagnet_train.ipynb  compare_models.py  compare_pointnet_vs_gencad.py  launch_train.bat  machinaq_gnn_train.ipynb  model_dev.ipynb  plan.md  pyproject.toml  regen_partition.py  requirements.txt  run_train.py  setup_aagnet.bat  setup_machgnn.bat  test_enhanced_model.py  train_aagnet.py  train_machgnn.py
.virtual_documents/: aagnet_train.ipynb  model_dev.ipynb
data/: test_hole.step
docs/: COMPARISON_SUMMARY.txt  GENCAD_QUICK_REFERENCE.md  POINTNET_VS_GENCAD_COMPARISON.md  POINTNET_VS_VLM_COMPARISON.md  QUICK_REFERENCE.md
models/: machinaq_unified.py  pointnet.py
nist_sfa/: HoleData1.20260420-232303.FCBak  HoleData1.FCStd  README.txt
nist_sfa/AP203 geometry only/: nist_ctc_01_asme1_rd.stp  nist_ctc_02_asme1_rc.stp  nist_ctc_03_asme1_rc.stp  nist_ctc_04_asme1_rd.stp  nist_ctc_05_asme1_rd.stp  nist_ftc_06_asme1_rd.stp  nist_ftc_07_asme1_rd.stp  nist_ftc_08_asme1_rc.stp  nist_ftc_09_asme1_rd.stp  nist_ftc_10_asme1_rb.stp  nist_ftc_11_asme1_rb.stp
nist_sfa/AP203 with PMI/: nist_ctc_01_asme1_ap203.g  nist_ctc_01_asme1_ap203.stp  nist_ctc_02_asme1_ap203.stp  (+3 more)
outputs/: model_comparison.json  pointnet_vs_gencad_comparison.json
src/: __init__.py  api.py  asme_standards.py  features.py  hole_visualizer.py  parser.py  pipeline.py  primitive.py  train.py  train_enhanced.py  train_through_hole.py  train_unified.py  train_z_direction.py
tests/: __init__.py  test_parser.py  test_pipeline.py
(+5 files in other folders)
